syntax = "proto3";

package luqchain.bridge;

option go_package = "luqchain/bridge/types";

message BlockHeaderMerkle {
  
  bytes versionChainidHash = 1; 
  uint64 height = 2; 
  uint64 timeSecond = 3; 
  uint32 timeNanosecond = 4; 
  bytes lastblockidCommitHash = 5; 
  bytes nextvalidatorConsensusHash = 6; 
  bytes lastresultsHash = 7; 
  bytes evidenceProposerHash = 8; 
}